--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
   />
   <link rel="apple-touch-icon" href="/logo192.png" />
   
-  <!-- Google Fonts - Montserrat -->
+  <!-- Google Fonts - Montserrat Variable Font with All Weights -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Montserrat Variable Font - Supports weights 100-900 with italic variants -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <!-- Alternative: Individual weight imports for better browser support -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   
   <link rel="manifest" href="/manifest.json" />
   <title>Database Management System</title>
